# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2021-04-15 Michael Truog   <mjtruog at protonmail dot com>

    * Update hackney, certifi, idna, unicode_util_compat
    * Update exometer_core, hut, folsom, bear
    * Update epgsql
    * Update parse_trans
    * Update proper (minimum Erlang/OTP becomes 20.0)

2021-04-14 Michael Truog   <mjtruog at protonmail dot com>

    * Add the service configuration options
      aspects_suspend and aspects_resume for executing aspect functions
      when a service is suspended or resumed
    * Add cloudi_service_map_reduce functions
      aspect_suspend/1 and aspect_resume/1 for use with the
      aspects_suspend and aspects_resume service configuration options
      for suspending the map-reduce execution using the
      CloudI Service API services_suspend function
    * Fix configuration validation of {{_, _}} aspect function arity
    * Fix cloudi_core_i_os_port:sync/3 typespec use

2021-04-13 Michael Truog   <mjtruog at protonmail dot com>

    * Add CloudI Service API services_status process identifiers in
      pids_erlang and pids_os lists
    * Add cloudi_service_api_requests JSON support for
      services_status pids_erlang and pids_os data

2021-04-12 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_filesystem use_expires argument
    * Improve cloudi_core supervisor child spec order
    * Update supool

2021-04-09 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_filesystem replace_index argument for
      writing the cache replacement data to the filesystem
    * Add cloudi_service_filesystem debug/debug_level arguments for
      logging the currently loaded files_size in bytes

2021-04-05 Michael Truog   <mjtruog at protonmail dot com>

    * Update CloudI Service API README

2021-04-03 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_service_filesystem replace argument usage